manifests/pomerium-34.0.1.tgz-manifest.yaml
---
# Source: pomerium/templates/authenticate-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-pomerium-authenticate
  labels:
    app.kubernetes.io/name: pomerium-authenticate
    helm.sh/chart: pomerium-34.0.1
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: authenticate
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: https
      protocol: TCP
      name: https
    - name: metrics
      port: 9090
      protocol: TCP
      targetPort: metrics
  selector:
    app.kubernetes.io/name: pomerium-authenticate
    app.kubernetes.io/instance: my-release
---
# Source: pomerium/templates/authorize-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-pomerium-authorize
  labels:
    app.kubernetes.io/name: pomerium-authorize
    helm.sh/chart: pomerium-34.0.1
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: authorize
spec:
  clusterIP: None
  type: ClusterIP
  ports:
    - port: 443
      targetPort: https
      protocol: TCP
      name: https
    - name: metrics
      port: 9090
      protocol: TCP
      targetPort: metrics
  selector:
    app.kubernetes.io/name: pomerium-authorize
    app.kubernetes.io/instance: my-release
---
# Source: pomerium/templates/databroker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-pomerium-databroker
  labels:
    app.kubernetes.io/name: pomerium-databroker
    helm.sh/chart: pomerium-34.0.1
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: databroker
spec:
  clusterIP: None
  type: ClusterIP
  ports:
    - port: 443
      targetPort: https
      protocol: TCP
      name: https
    - name: metrics
      port: 9090
      protocol: TCP
      targetPort: metrics
  selector:
    app.kubernetes.io/name: pomerium-databroker
    app.kubernetes.io/instance: my-release
---
# Source: pomerium/templates/proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-pomerium-proxy
  labels:
    app.kubernetes.io/name: pomerium-proxy
    helm.sh/chart: pomerium-34.0.1
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: proxy
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: https
      protocol: TCP
      name: https
    - name: http
      targetPort: 80
      protocol: TCP
      port: 80
  selector:
    app.kubernetes.io/name: pomerium-proxy
    app.kubernetes.io/instance: my-release
---
# Source: pomerium/templates/authenticate-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: pomerium-authenticate
    helm.sh/chart: pomerium-34.0.1
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/component: authenticate
  name: my-release-pomerium-authenticate
  annotations:
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pomerium-authenticate
      app.kubernetes.io/instance: my-release
  template:
    metadata:
      annotations:
        checksum: 36b0ddba506e8c3ff2777eff770f55bfd6edca5c183d9ecc647aebb14c0680df
      labels:
        app.kubernetes.io/name: pomerium-authenticate
        helm.sh/chart: pomerium-34.0.1
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/instance: my-release
    spec:
      containers:
      - name: pomerium
        image: pomerium/pomerium:v0.22.1
        imagePullPolicy: IfNotPresent
        args:
          - --config=/etc/pomerium/config.yaml
        ports:
          - containerPort: 443
            name: https
            protocol: TCP
          - containerPort: 9090
            name: metrics
            protocol: TCP
        livenessProbe:
          httpGet:
            path: /ping
            port: https
            scheme: HTTPS
        readinessProbe:
          httpGet:
            path: /ping
            port: https
            scheme: HTTPS
        resources:
          {}
        volumeMounts:
          - mountPath: /etc/pomerium/
            name: config
          - mountPath: /pomerium/tls
            name: service-tls
          - mountPath: /pomerium/ca
            name: ca-tls
      serviceAccountName: my-release-pomerium-authenticate
      volumes:
        - name: config
          secret:
            secretName: my-release-pomerium
        - name: ca-tls
          secret:
            secretName: my-release-pomerium-ca-tls
            optional: true
        - name: service-tls
          secret:
            secretName: my-release-pomerium-authenticate-tls
            optional: true
---
# Source: pomerium/templates/authorize-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: pomerium-authorize
    helm.sh/chart: pomerium-34.0.1
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/component: authorize
  name: my-release-pomerium-authorize
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pomerium-authorize
      app.kubernetes.io/instance: my-release
  template:
    metadata:
      annotations:
        checksum: 36b0ddba506e8c3ff2777eff770f55bfd6edca5c183d9ecc647aebb14c0680df
      labels:
        app.kubernetes.io/name: pomerium-authorize
        helm.sh/chart: pomerium-34.0.1
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/instance: my-release
    spec:
      containers:
      - name: pomerium
        image: pomerium/pomerium:v0.22.1
        imagePullPolicy: IfNotPresent
        args:
          - --config=/etc/pomerium/config.yaml
        ports:
          - containerPort: 443
            name: https
            protocol: TCP
          - containerPort: 9090
            name: metrics
            protocol: TCP
        livenessProbe:
          tcpSocket:
            port: https
          initialDelaySeconds: 15
        readinessProbe:
          tcpSocket:
            port: https
        resources:
          {}
        volumeMounts:
          - mountPath: /etc/pomerium/
            name: config
          - mountPath: /pomerium/tls
            name: service-tls
          - mountPath: /pomerium/ca
            name: ca-tls
      serviceAccountName: my-release-pomerium-authorize
      volumes:
        - name: config
          secret:
            secretName: my-release-pomerium
        - name: ca-tls
          secret:
            secretName: my-release-pomerium-ca-tls
            optional: true
        - name: service-tls
          secret:
            secretName: my-release-pomerium-authorize-tls
            optional: true
---
# Source: pomerium/templates/databroker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: pomerium-databroker
    helm.sh/chart: pomerium-34.0.1
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/component: databroker
  name: my-release-pomerium-databroker
  annotations:
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pomerium-databroker
      app.kubernetes.io/instance: my-release
  template:
    metadata:
      annotations:
        checksum: 36b0ddba506e8c3ff2777eff770f55bfd6edca5c183d9ecc647aebb14c0680df
      labels:
        app.kubernetes.io/name: pomerium-databroker
        helm.sh/chart: pomerium-34.0.1
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/instance: my-release
    spec:
      containers:
      - name: pomerium
        image: pomerium/pomerium:v0.22.1
        imagePullPolicy: IfNotPresent
        args:
          - --config=/etc/pomerium/config.yaml
        ports:
          - containerPort: 443
            name: https
            protocol: TCP
          - containerPort: 9090
            name: metrics
            protocol: TCP
        livenessProbe:
          tcpSocket:
            port: https
          initialDelaySeconds: 15
        readinessProbe:
          tcpSocket:
            port: https
        resources:
          {}
        volumeMounts:
          - mountPath: /pomerium/databroker-client-tls
            name: databroker-client-tls
          - mountPath: /etc/pomerium/
            name: config
          - mountPath: /pomerium/tls
            name: service-tls
          - mountPath: /pomerium/ca
            name: ca-tls
      serviceAccountName: my-release-pomerium-databroker
      volumes:
        - name: databroker-client-tls
          secret:
            secretName: my-release-pomerium-databroker-client-tls
        - name: config
          secret:
            secretName: my-release-pomerium
        - name: ca-tls
          secret:
            secretName: my-release-pomerium-ca-tls
            optional: true
        - name: service-tls
          secret:
            secretName: my-release-pomerium-databroker-tls
            optional: true
---
# Source: pomerium/templates/proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: pomerium-proxy
    helm.sh/chart: pomerium-34.0.1
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/component: proxy
  name: my-release-pomerium-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pomerium-proxy
      app.kubernetes.io/instance: my-release
  template:
    metadata:
      annotations:
        checksum: 36b0ddba506e8c3ff2777eff770f55bfd6edca5c183d9ecc647aebb14c0680df
      labels:
        app.kubernetes.io/name: pomerium-proxy
        helm.sh/chart: pomerium-34.0.1
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/instance: my-release
    spec:
      containers:
      - name: pomerium
        image: pomerium/pomerium:v0.22.1
        imagePullPolicy: IfNotPresent
        args:
          - --config=/etc/pomerium/config.yaml
        ports:
          - containerPort: 443
            name: https
            protocol: TCP
          - name: http
            containerPort: 80
            protocol: TCP
          - containerPort: 9090
            name: metrics
            protocol: TCP
        livenessProbe:
          httpGet:
            path: /ping
            port: https
            scheme: HTTPS
        readinessProbe:
          httpGet:
            path: /ping
            port: https
            scheme: HTTPS
        resources:
          {}
        volumeMounts:
          - mountPath: /etc/pomerium/
            name: config
          - mountPath: /pomerium/tls
            name: service-tls
          - mountPath: /pomerium/ca
            name: ca-tls
      serviceAccountName: my-release-pomerium-proxy
      volumes:
        - name: config
          secret:
            secretName: my-release-pomerium
        - name: ca-tls
          secret:
            secretName: my-release-pomerium-ca-tls
            optional: true
        - name: service-tls
          secret:
            secretName: my-release-pomerium-proxy-tls
            optional: true
---
# Source: pomerium/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-release-pomerium
  labels:
    app.kubernetes.io/name: pomerium
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    helm.sh/chart: pomerium-34.0.1
spec:
  
  tls:
    - secretName: pomerium-tls
      hosts:
        - authenticate.corp.beyondperimeter.com
  rules:
    - host: authenticate.corp.beyondperimeter.com
      http:
        paths:
          - backend:
              service:
                name: my-release-pomerium-authenticate
                port:
                  name: https
            pathType: ImplementationSpecific
